Fix hearo section extra spacing

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -423,6 +423,7 @@ button:hover::before,
 
 .hero {
   background-color: #fafafa;
+  overflow-x: hidden;
 }
 
 @media (min-width: 64em) {
