--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -1,5 +1,6 @@
 .hero {
   background-color: $veryLightGray;
+  overflow-x: hidden;
 
   .container {
     @include breakpoints-up(large) {
